--- a/some cool animals/some_cool_animals.Rmd
+++ b/some cool animals/some_cool_animals.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Some cool animal facts"
-author: "Philip Leftwich"
+author: "Adaobi Anyaeche"
 output: html_document
 ---
 
@@ -55,9 +55,16 @@ knitr::opts_chunk$set(echo = TRUE)
 
 - Can rotate their hind feet 180 degrees to climb better
 - They are not endangered, just very elusive
-- Closely related to raccoons
+- Closely related to raccoon
 
-###
+#### Baby Yoda 
+
+![Photo: Courtesy of Starwars](Grogu.jpg) 
+Baby Yoda fun facts:
+
+- Also known as “The Child”
+- Likes unfertilised frog eggs & control knobs
+- Strong with the force
 
 ----------
 **Disclaimer:** This document is only for R Markdown & GitHub teaching purposes
